Change banner image URL in index.html
Updated banner image URL in the HTML file.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ button:hover {
 
 <main>
 
-<!-- Banner https://architectenweb.nl/media/illustrations/2012/05/4b75de71-b18f-408b-89a0-cac20eeade59_400.jpg -->
+<!-- Banner https://i.imgur.com/LPAqDnZ.png -->
 <div class="banner">
     <img src="https://images.unsplash.com/photo-1596496051520-13902b39b14b?auto=format&fit=crop&w=1200&q=60" alt="School foto">
 </div>
