--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ button:hover {
 
 <!-- Banner schoolfoto -->
 <div class="banner">
-    <img src="https://images.unsplash.com/photo-1596496051520-13902b39b14b?auto=format&fit=crop&w=1200&q=60" alt="School foto">
+    <img src="https://i.imgur.com/LPAqDnZ.png" alt="School foto">
 </div>
 
 <!-- Doelcijfer Calculator -->
