--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@ body {
     font-family: 'Segoe UI', Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #e0e0e0; /* rustiger lichtgrijs */
+    background: linear-gradient(to bottom, #f0f4f8, #ffffff);
     color: #333;
 }
 
 /* Header */
 header {
-    background-color: #4a90e2;
+    background-color: #3a7bd5;
     color: white;
     display: flex;
     align-items: center;
@@ -53,7 +53,7 @@ main {
 
 /* Titels */
 h2 {
-    color: #4a90e2;
+    color: #3a7bd5;
     margin-bottom: 15px;
 }
 
@@ -76,7 +76,7 @@ input[type="number"] {
 
 /* Knoppen */
 button {
-    background-color: #4a90e2;
+    background-color: #3a7bd5;
     color: white;
     border: none;
     padding: 10px 18px;
@@ -86,7 +86,7 @@ button {
     transition: 0.2s;
 }
 button:hover {
-    background-color: #357ABD;
+    background-color: #2c5aa0;
 }
 
 /* Resultaten */
